--- a/index.html
+++ b/index.html
@@ -33,33 +33,46 @@
 
           <legend>Contact Information</legend>
 
-          <label for="full_name">Full Name</label>
-          <input type="text" id="full_name" name="user_name" placeholder="Required">
+          <div class="input_wrapper">
+            <label for="full_name">Full Name</label>
+            <input type="text" id="full_name" name="user_name" placeholder="Required" required>
+          </div>
 
-          <label for="user-name">Email Address</label>
-          <input type="text" id="user_email" name="user_email" placeholder="Required">
+          <diV class="input_wrapper">
+            <label for="user_email">Email Address</label>
+            <input type="email" id="user_email" name="user_email" placeholder="Required" required>
+          </diV>
 
-          <label for="phone_number">Phone number</label>
-          <input type="text" id="phone_number" name="phone_number">
+          <div class="input_wrapper">
+            <label for="phone_number">Phone number</label>
+            <input type="tel" id="phone_number" name="phone_number" placeholder="e.g. +56 8434 543 23">
+          </div>
 
-          <label for="address">Street Adress</label>
-          <input type="text" id="address" name="address">
+          <div class="input_wrapper">
+            <label for="address">Street Address</label>
+            <input type="text" id="address" name="address" placeholder="Street and house number are required">
+          </div>
 
-          <label for="city">City</label>
-          <input type="text" id="city" name="city">
+          <div class="input_wrapper">
+            <label for="city">City</label>
+            <input type="text" id="city" name="city" placeholder="e.g. Los Angeles">
+          </div>
 
+          <div class="input_wrapper">
           <label for="state">State</label>
-          <select id="state">
-            <option value="">Choose State</option>
-            <option value="california">California</option>
-            <option value="luisiana">Luisiana</option>
-            <option value="nevada">Nevada</option>
-            <option value="new_mexico">New Mexico</option>
+            <select id="state">
+              <option value="">Choose State</option>
+              <option value="california">California</option>
+              <option value="luisiana">Luisiana</option>
+              <option value="nevada">Nevada</option>
+              <option value="new_mexico">New Mexico</option>
+            </select>
+          </div>
 
-          </select>
-
-          <label for="zip_code">Zip Code</label>
-          <input type="text" id="zip_code" name="zip_code">
+          <div class="input_wrapper">
+            <label for="zip_code">Zip Code</label>
+            <input type="text" id="zip_code" name="zip_code" placeholder="e.g. 04677">
+          </div>
 
         </fieldset>
 
@@ -67,7 +80,7 @@
 
           <legend>Newsletter</legend>
 
-          <label>Select the newsletters you would like to receive:</label><br>
+          <label id="news_topic">Select the newsletters you would like to receive:</label><br>
 
           <input type="checkbox" id="ht_news" value="html_news" name="type_of_newsletter"><label for="ht_news">HTML News</label><br>
 
